# infyrai-examples

./: LICENSE.md  readme.md
js/chatbot-nextjs-example/: next.config.js  package-lock.json  package.json
js/chatbot-nextjs-example/src/app/: layout.tsx  page.tsx
js/chatbot-nextjs-example/src/app/api/chat/: route.ts
js/chatbot-nextjs-example/src/components/: Chatbot.tsx
py/: Embedding model.ipynb  Infyr.AI Demo.ipynb  README.md  chat_bot.py  infyr-ai-sdk.ipynb  pyproject.toml
py/autogen-example/: .env.example  README.md  main.py  package-lock.json  package.json  pyproject.toml  web-agent.py
