[project]
name = "infyr-ai-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.78.0",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "ruff>=0.11.9",
]
